--- a/galaxy.yml
+++ b/galaxy.yml
@@ -3,13 +3,13 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric characters and underscores. Additionally namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: inwx
+namespace: markuman
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: collection
+name: inwx
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.3.0
+version: 2.0.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -18,6 +18,7 @@ readme: README.md
 # @nicks:irc/im.site#channel'
 authors:
 - Nick Ufer <nu@inwx.de>
+- Markus Bergholz@ <git@osuv.de>
 
 
 ### OPTIONAL but strongly recommended
@@ -40,13 +41,13 @@ tags: [ inwx, collection, dns, api, domrobot ]
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/inwx/ansible-collection
+repository: https://github.com/markuman/ansible-collection
 
 # The URL to any online docs
-documentation: https://github.com/inwx/ansible-collection
+documentation: https://github.com/markuman/ansible-collection
 
 # The URL to the homepage of the collection/project
 homepage: https://inwx.com
 
 # The URL to the collection issue tracker
-issues: https://github.com/inwx/ansible-collection/issues
+issues: https://github.com/markuman/ansible-collection/issues
